--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>whoops</title>
+    <meta name="description" content="Everything related to me can be found here.">
+    <!-- meta description tag has a 160 character limit -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- https://www.youtube.com/watch?v=ykgQosTbeSQ -->
+    <title>Devin Coss</title>
   </head>
   <body>
     <div>testing...</div>
