--- a/index.html
+++ b/index.html
@@ -7,8 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- https://www.youtube.com/watch?v=ykgQosTbeSQ -->
     <title>Devin Coss</title>
+    <!-- for the header https://www.youtube.com/watch?v=GxwHXxumdQk -->
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <style>
+    *{
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      text-decoration: none;
+    }
+    .header{
+      width: 100%;
+      height: 40px;
+      display: block;
+      background-color: #101010;
+      font: white;
+    }
+    .inner_header{
+      width: 80%;
+      height: 100%;
+      display: block;
+      margin: 0 auto;
+    }
+    .logo_container{
+      height: 100%;
+      display: table;
+      float: left;
+    }
+    .logo_container div{
+      color: white;
+      height: 100%;
+      display: table-cell;
+      vertical-align: middle;
+      font-family: 'Permanent Marker', cursive;
+      font-size: 26px;
+    }
+    .navigation{
+      float: right;
+      height: 100%;
+    }
+    .navigation a{
+      height: 100%;
+      display: table;
+      float: left;
+      padding: 0px 20px;
+    }
+    .navigation a li{
+      display: table-cell;
+      vertical-align: middle;
+      height: 100%;
+      color: white;
+      font-family: 'Poppins', sans-serif;
+    }
+    .navigation a:last-child{
+      padding-right: 0;
+    }
+    </style>
   </head>
   <body>
+    <div class="header">
+      <div class="inner_header">
+        <div class="logo_container">
+          <div>Devin Coss</div>
+        </div>
+        <ul class="navigation">
+          <a><li>Home</li></a>
+          <a><li>Music</li></a>
+          <a><li>Nonsense</li></a>
+          <a href="https://twitter.com/DevinCoss"><li>Twitter</li></a>
+          <a><li>About</li></a>
+        </ul>
+      </div>
+    </div>
     <div>testing...</div>
     <img src="output.jpg">
   </body>
