--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="description" content="Everything related to me can be found here.">
     <!-- meta description tag has a 160 character limit -->
@@ -9,61 +10,7 @@
     <title>Devin Coss</title>
     <!-- for the header https://www.youtube.com/watch?v=GxwHXxumdQk -->
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-    <style>
-    *{
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      text-decoration: none;
-    }
-    .header{
-      width: 100%;
-      height: 40px;
-      display: block;
-      background-color: #101010;
-      font: white;
-    }
-    .inner_header{
-      width: 80%;
-      height: 100%;
-      display: block;
-      margin: 0 auto;
-    }
-    .logo_container{
-      height: 100%;
-      display: table;
-      float: left;
-    }
-    .logo_container div{
-      color: white;
-      height: 100%;
-      display: table-cell;
-      vertical-align: middle;
-      font-family: 'Permanent Marker', cursive;
-      font-size: 26px;
-    }
-    .navigation{
-      float: right;
-      height: 100%;
-    }
-    .navigation a{
-      height: 100%;
-      display: table;
-      float: left;
-      padding: 0px 20px;
-    }
-    .navigation a li{
-      display: table-cell;
-      vertical-align: middle;
-      height: 100%;
-      color: white;
-      font-family: 'Poppins', sans-serif;
-    }
-    .navigation a:last-child{
-      padding-right: 0;
-    }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="header">
