--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </div>
-    <div>testing...</div>
-    <img src="output.jpg">
+    <div class="site_container">test
+    </div>
   </body>
 </html>
