--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a><li>Music</li></a>
           <a><li>Nonsense</li></a>
           <a href="https://twitter.com/DevinCoss"><li>Twitter</li></a>
-          <a><li>About</li></a>
+          <a href="about.html"><li>About</li></a>
         </ul>
       </div>
     </div>
