--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         </div>
         <ul class="navigation">
           <a><li>Home</li></a>
-          <a><li>Music</li></a>
+          <a href="music.html"><li>Music</li></a>
           <a><li>Nonsense</li></a>
           <a href="https://twitter.com/DevinCoss"><li>Twitter</li></a>
           <a href="about.html"><li>About</li></a>
