--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <div>Devin Coss</div>
         </div>
         <ul class="navigation">
-          <a><li>Home</li></a>
+          <a href="index.html"><li>Home</li></a>
           <a href="music.html"><li>Music</li></a>
           <a><li>Nonsense</li></a>
           <a href="https://twitter.com/DevinCoss"><li>Twitter</li></a>
