--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <ul class="navigation">
           <a href="index.html"><li>Home</li></a>
           <a href="music.html"><li>Music</li></a>
-          <a><li>Nonsense</li></a>
+          <a><li>Podcast</li></a>
           <a href="https://twitter.com/DevinCoss"><li>Twitter</li></a>
           <a href="about.html"><li>About</li></a>
+          <a><li>Contact</li></a>
         </ul>
       </div>
     </div>
